--- a/src/style/global.css
+++ b/src/style/global.css
@@ -46,16 +46,17 @@ div {
 }
 
 .searchTool .title h2 {
-  color: #2d66d3 !important;
+  color: #FFFDD6 !important;
 }
 
 .searchTool .title h1 {
+  color: #FFFDD6 !important;
   font-weight: 500;
   border-left: 2px solid;
   height: 40px;
   padding: 0 5px;
   line-height: 55px;
-  border-color: var(--main) !important;
+  border-color: #FFFDD6 !important;
 }
 
 .searchTool .grid_box {
@@ -171,10 +172,22 @@ div {
 }
 
 .searchTool .button_search {
+  display: flex;
   width: max-content;
   height: max-content;
   margin: 20px auto;
   transform: scale(1.5);
+}
+
+.searchTool .button_search svg {
+  width: 40px;
+  height: 40px;
+  padding: 10px;
+  box-sizing: border-box;
+  background-color: var(--main);
+  border-radius: 5px;
+  margin: auto 10px;
+  color: white;
 }
 
 .header {
@@ -198,9 +211,9 @@ div {
   height: 100vh;
   top: 0;
   right: 0;
-  background: var(--background);
+  background: white;
   font-size: 1.1rem;
-  color: var(--main);
+  color: #53B5E1;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -580,7 +593,7 @@ div {
 .contain_V2 .about {
   min-height: 400px;
   padding-top: 400px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #FFFDD6;
   padding-bottom: 100px;
 }
 
@@ -635,11 +648,19 @@ div {
 }
 
 .contain_V2 .about .content_news {
-  text-align: center;
+  border: 1px solid #888;
+  width: 90%;
+  max-width: 1200px;
+  padding: 25px;
+  margin: 25px auto;
+  height: 300px;
+  overflow: auto;
 }
 
 .contain_V2 .about .content_news h2 {
   margin-bottom: 5px;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .contain_V2 .about .content_news .category {
@@ -660,15 +681,21 @@ div {
 }
 
 .contain_V2 .about .content_news .text {
-  padding: 50px 0;
-  width: 90%;
-  max-width: 992px;
+  padding: 25px 0;
+  width: 100%;
+  max-width: 1200px;
   margin: auto;
-  text-align: justify;
+  text-align: left;
+}
+
+.contain_V2 .about .content_news .text p {
+  text-align: left;
+  width: 100%;
 }
 
 .contain_V2 .div_items {
   padding: 5% 0;
+  background: white;
 }
 
 .contain_V2 .div_items .title {
@@ -763,7 +790,7 @@ div {
 }
 
 .contain_V2 .div_items_bg_blue {
-  background-color: var(--second);
+  background-color: #53B5E1;
   height: 700px;
 }
 
@@ -825,18 +852,18 @@ div {
 }
 
 .footer .column {
-  color: #666;
-  font-size: 14px;
+  color: #53B5E1;
+  cursor: pointer;
 }
 
-.footer .column h2 {
-  margin-bottom: 10px;
-  cursor: pointer;
+.footer .column h4 {
+  font-size: 1.25rem;
+  text-align: center;
 }
 
 .footer .column p {
-  margin-bottom: 5px;
-  cursor: pointer;
+  margin: 5px 0;
+  text-align: center;
 }
 
 @media (min-width: 768px) {
@@ -1323,8 +1350,9 @@ div {
 }
 
 .searchPage {
-  background-color: var(--second);
+  background-color: #53B5E1;
   padding: 50px 0;
+  min-height: calc(100vh - 200px);
 }
 
 .searchPage .title {
